[gd_scene load_steps=27 format=3 uid="uid://u4xtisqvn7tk"]

[ext_resource type="Script" path="res://Scripts/VictoryScreen.gd" id="1_b2dft"]
[ext_resource type="Texture2D" uid="uid://c80oje3s76opb" path="res://Characters/prisoner_sprite_sheet_transparent_16x16.png" id="2_bue3b"]
[ext_resource type="PackedScene" uid="uid://2rrb4o2dx8pd" path="res://Level/level_tile_map.tscn" id="3_58wie"]
[ext_resource type="AudioStream" uid="uid://dqh2g6pibdjg3" path="res://Sounds/Adventure pack 1 ogg/happywalking.ogg" id="4_e21t6"]

[sub_resource type="LabelSettings" id="LabelSettings_4lwnn"]
font_size = 48

[sub_resource type="Animation" id="Animation_3atio"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_qhv7b"]
resource_name = "victory"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-64, 192), Vector2(704, 192)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite/AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vnopc"]
_data = {
"RESET": SubResource("Animation_3atio"),
"victory": SubResource("Animation_qhv7b")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_pqsku"]
atlas = ExtResource("2_bue3b")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwb04"]
atlas = ExtResource("2_bue3b")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca6st"]
atlas = ExtResource("2_bue3b")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rusyv"]
atlas = ExtResource("2_bue3b")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7pvi"]
atlas = ExtResource("2_bue3b")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35raj"]
atlas = ExtResource("2_bue3b")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5rl2"]
atlas = ExtResource("2_bue3b")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tenkk"]
atlas = ExtResource("2_bue3b")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2sjy"]
atlas = ExtResource("2_bue3b")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x1pw"]
atlas = ExtResource("2_bue3b")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lk6g"]
atlas = ExtResource("2_bue3b")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgge4"]
atlas = ExtResource("2_bue3b")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgtc8"]
atlas = ExtResource("2_bue3b")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qe34"]
atlas = ExtResource("2_bue3b")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5jua"]
atlas = ExtResource("2_bue3b")
region = Rect2(192, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mwg25"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqsku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwb04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca6st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rusyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7pvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35raj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5rl2")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tenkk")
}],
"loop": false,
"name": &"jump",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2sjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x1pw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lk6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgge4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgtc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qe34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5jua")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="Gradient" id="Gradient_tmsg6"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c16dx"]
gradient = SubResource("Gradient_tmsg6")
fill_from = Vector2(0, 0.550459)
fill_to = Vector2(1, 0.541284)

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b2dft")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0431373, 0.0431373, 0.0431373, 0.509804)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Freedom!"
label_settings = SubResource("LabelSettings_4lwnn")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "You've beaten the game!
Thank you for playing."
horizontal_alignment = 1

[node name="MainMenu" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Return to Main Menu"

[node name="ExitGame" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[node name="VictoryAnimation" type="AnimationPlayer" parent="ColorRect/CenterContainer"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_vnopc")
}
autoplay = "victory"

[node name="PlayerSprite" type="CharacterBody2D" parent="."]
process_mode = 3
position = Vector2(-64, 192)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PlayerSprite"]
process_mode = 3
light_mask = 0
z_index = 1
scale = Vector2(4.6001, 4.6001)
sprite_frames = SubResource("SpriteFrames_mwg25")
animation = &"run"
autoplay = "run"
frame_progress = 0.540235

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(512, 180)
scale = Vector2(6, 5.625)
energy = 0.0
range_layer_min = -1
shadow_enabled = true
texture = SubResource("GradientTexture2D_c16dx")

[node name="LevelTileMap" parent="." instance=ExtResource("3_58wie")]
position = Vector2(0, 168)
layer_0/z_index = 1
layer_0/tile_data = PackedInt32Array(589824, 589831, 2, 655360, 524295, 3, 720896, 524295, 3, 720897, 524295, 4, 655361, 524295, 4, 589825, 524295, 1, 589826, 589831, 1, 655362, 524295, 2, 720898, 589831, 4, 720899, 524295, 3, 655363, 589831, 2, 589827, 524295, 3, 589828, 589831, 1, 589829, 589831, 4, 655365, 589831, 3, 655364, 524295, 1, 720900, 524295, 3, 720901, 524295, 1, 589830, 524295, 4, 655366, 524295, 1, 720902, 589831, 1, 720903, 589831, 3, 655367, 524295, 1, 589831, 589831, 2, 589832, 524295, 4, 589833, 524295, 2, 720905, 589831, 1, 720904, 589831, 2, 655368, 589831, 3, 655369, 524295, 2, 589834, 524295, 4, 655370, 589831, 4, 720906, 589831, 1, 589835, 589831, 4, 655371, 524295, 4, 720907, 524295, 1, 720908, 524295, 2, 655372, 589831, 3, 589836, 524295, 3, 589837, 524295, 1, 589838, 589831, 4, 589839, 589831, 4, 589840, 589831, 2, 589841, 524295, 2, 589842, 589831, 3, 589843, 524295, 3, 589844, 589831, 1, 655373, 589831, 4, 655374, 589831, 2, 655375, 589831, 3, 655376, 589831, 4, 655377, 589831, 4, 655378, 589831, 2, 655379, 524295, 3, 655380, 589831, 4, 655381, 589831, 2, 655382, 524295, 3, 655383, 589831, 1, 655395, 131073, 7, 655396, 196609, 7, 655397, 65537, 2, 655398, 196609, 2, 655399, 131073, 2, 589845, 524295, 4, 589846, 524295, 3, 589847, 589831, 4, 589859, 196609, 7, 589860, 589825, 11, 589861, 196609, 2, 589862, 131073, 2, 589863, 65537, 2, 720909, 524295, 3, 720910, 524295, 2, 720911, 589831, 2, 720912, 589831, 2, 720913, 524295, 2, 720914, 524295, 3, 720915, 589831, 3, 720916, 524295, 1, 720917, 524295, 3, 720918, 524295, 4, 720919, 589831, 3, 720931, 196609, 7, 720932, 131073, 7, 720933, 131073, 2, 720934, 131073, 2, 720935, 65537, 2, 589848, 524295, 3, 655384, 524295, 3, 720920, 524295, 2, 589849, 589831, 2, 655385, 524295, 4, 720921, 524295, 4, 589850, 589831, 1, 655386, 524295, 2, 720922, 589831, 1, 589851, 524295, 3, 655387, 524295, 2, 720923, 524295, 3, 589852, 589831, 4, 655388, 524295, 1, 720924, 524295, 1, 589853, 524295, 4, 655389, 524295, 1, 720925, 524295, 2, 589854, 589831, 1, 655390, 589831, 4, 720926, 524295, 1, 589855, 524295, 1, 655391, 589831, 2, 720927, 589831, 1, 589856, 589831, 3, 655392, 524295, 4, 720928, 524295, 2, 589857, 524295, 1, 655393, 131073, 7, 720929, 589831, 1, 589858, 131073, 7, 655394, 131073, 7, 720930, 131073, 7, 327680, 589831, 4, 393216, 589831, 2, 458752, 524295, 1, 524288, 524295, 2, 327681, 589831, 1, 393217, 589831, 4, 458753, 589831, 3, 524289, 524295, 4, 327682, 589831, 3, 393218, 524295, 1, 458754, 589831, 3, 524290, 589831, 4, 327683, 589831, 2, 393219, 524295, 2, 458755, 589831, 1, 524291, 524295, 4, 327684, 524295, 5, 393220, 589831, 2, 458756, 524295, 1, 524292, 589831, 1, 327685, 589831, 4, 393221, 589831, 5, 458757, 589831, 2, 524293, 589831, 2, 327686, 524295, 4, 393222, 589831, 3, 458758, 589831, 3, 524294, 589831, 1, 327687, 589831, 5, 393223, 524295, 4, 458759, 589831, 1, 524295, 524295, 1, 327688, 524295, 4, 393224, 589831, 3, 458760, 524295, 2, 524296, 589831, 2, 327689, 524295, 2, 393225, 524295, 1, 458761, 589831, 2, 524297, 524295, 4, 327690, 524295, 5, 393226, 589831, 2, 458762, 589831, 1, 524298, 524295, 4, 327691, 589831, 5, 393227, 589831, 4, 458763, 589831, 2, 524299, 589831, 4, 327692, 589831, 1, 393228, 589831, 5, 458764, 524295, 1, 524300, 589831, 3, 327693, 524295, 2, 393229, 589831, 3, 458765, 589831, 4, 524301, 589831, 1, 327694, 589831, 3, 393230, 589831, 4, 458766, 524295, 4, 524302, 589831, 3, 327695, 524295, 4, 393231, 524295, 1, 458767, 589831, 4, 524303, 524295, 3, 327696, 589831, 3, 393232, 589831, 1, 458768, 524295, 2, 524304, 524295, 4, 327697, 524295, 3, 393233, 589831, 1, 458769, 589831, 3, 524305, 524295, 1, 327698, 589831, 3, 393234, 589831, 5, 458770, 524295, 4, 524306, 524295, 4, 327699, 589831, 2, 393235, 589831, 2, 458771, 524295, 4, 524307, 589831, 2, 327700, 589831, 1, 393236, 589831, 5, 458772, 589831, 1, 524308, 589831, 3, 327701, 524295, 1, 393237, 524295, 4, 458773, 524295, 3, 524309, 524295, 2, 327702, 589831, 1, 393238, 589831, 3, 458774, 589831, 4, 524310, 524295, 3, 327703, 524295, 4, 393239, 524295, 2, 458775, 524295, 2, 524311, 524295, 4, 327704, 589831, 4, 393240, 589831, 4, 458776, 589831, 1, 524312, 524295, 1, 327705, 524295, 5, 393241, 589831, 4, 458777, 589831, 4, 524313, 524295, 4, 327706, 524295, 3, 393242, 589831, 4, 458778, 524295, 2, 524314, 589831, 1, 327707, 524295, 2, 393243, 589831, 3, 458779, 524295, 4, 524315, 589831, 4, 327708, 589831, 3, 393244, 524295, 4, 458780, 589831, 3, 524316, 524295, 2, 327709, 589831, 4, 393245, 589831, 4, 458781, 589831, 4, 524317, 524295, 2, 327710, 589831, 4, 393246, 589831, 2, 458782, 524295, 1, 524318, 589831, 4, 327711, 524295, 1, 393247, 589831, 5, 458783, 589831, 2, 524319, 524295, 1, 327712, 524295, 1, 393248, 589831, 3, 458784, 589831, 1, 524320, 524295, 3, 327713, 524295, 2, 393249, 524295, 4, 458785, 196609, 7, 327714, 589831, 4, 393250, 196609, 7, 458786, 196609, 7, 524322, 589831, 2, 327715, 196609, 7, 393251, 196609, 7, 458787, 196609, 7, 524323, 196609, 7, 327716, 131073, 7, 458788, 196609, 7, 524324, 196609, 7, 327717, 131073, 2, 458789, 196609, 2, 524325, 65537, 2, 327718, 196609, 2, 393254, 196609, 2, 458790, 65537, 2, 524326, 65537, 2, 327719, 196609, 2, 393255, 131073, 2, 458791, 131073, 2, 524327, 196609, 2, 262144, 131079, 1, 262145, 131079, 1, 262146, 131079, 1, 262147, 131079, 1, 262148, 131079, 1, 262149, 131079, 1, 262150, 131079, 1, 262151, 131079, 1, 262152, 131079, 1, 262153, 131079, 1, 262154, 131079, 1, 262155, 131079, 1, 262156, 131079, 1, 262157, 131079, 1, 262158, 131079, 1, 262159, 131079, 1, 262160, 131079, 1, 262161, 131079, 1, 262162, 131079, 1, 262163, 131079, 1, 262164, 131079, 1, 262165, 131079, 1, 262166, 131079, 1, 262167, 131079, 1, 262168, 131079, 1, 262169, 131079, 1, 262170, 131079, 1, 262171, 131079, 1, 262172, 131079, 1, 262173, 131079, 1, 262174, 131079, 1, 262175, 131079, 1, 262176, 131079, 1, 262177, 131079, 1, 262178, 131079, 1, 262179, 1, 11, 262180, 131073, 1, 262181, 65537, 1, 262182, 131073, 1, 262183, 196609, 1, 196645, 65537, 0, 196646, 131073, 0, 196647, 196609, 0, 196643, 1, 10, 196644, 131073, 0, 524321, 524295, 1, 393253, 196609, 7, 393252, 131073, 7)
layer_1/modulate = Color(0.27451, 0.27451, 0.27451, 1)
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array(-720896, 524295, 5, -655360, 524295, 1, -589824, 524295, 3, -524288, 524295, 2, -458752, 524295, 1, -393216, 524295, 2, -327680, 589831, 2, -262144, 589831, 4, -196608, 524295, 3, -131072, 524295, 3, -65536, 524295, 1, 0, 524295, 1, 65536, 524295, 5, 131072, 524295, 1, 196608, 524295, 3, -720895, 589831, 1, -655359, 589831, 4, -589823, 524295, 2, -524287, 524295, 4, -458751, 524295, 1, -393215, 589831, 1, -327679, 589831, 1, -262143, 524295, 5, -196607, 589831, 5, -131071, 524295, 4, -65535, 589831, 2, 1, 589831, 1, 65537, 589831, 2, 131073, 524295, 1, 196609, 524295, 1, -720894, 589831, 2, -655358, 524295, 5, -589822, 524295, 2, -524286, 589831, 4, -458750, 524295, 5, -393214, 524295, 3, -327678, 524295, 3, -262142, 524295, 2, -196606, 589831, 5, -131070, 589831, 5, -65534, 524295, 2, 2, 589831, 3, 65538, 589831, 5, 131074, 589831, 3, 196610, 589831, 3, -720893, 524295, 4, -655357, 589831, 3, -589821, 589831, 3, -524285, 524295, 1, -458749, 589831, 1, -393213, 589831, 5, -327677, 524295, 1, -262141, 524295, 3, -196605, 589831, 3, -131069, 524295, 3, -65533, 589831, 5, 3, 524295, 2, 65539, 589831, 5, 131075, 589831, 1, 196611, 589831, 4, -720892, 524295, 1, -655356, 589831, 5, -589820, 589831, 4, -524284, 524295, 1, -458748, 589831, 2, -393212, 524295, 3, -327676, 589831, 1, -262140, 524295, 1, -196604, 524295, 4, -131068, 524295, 2, -65532, 524295, 1, 4, 524295, 4, 65540, 589831, 1, 131076, 589831, 4, 196612, 589831, 4, -720891, 524295, 1, -655355, 589831, 1, -589819, 589831, 5, -524283, 589831, 1, -458747, 524295, 4, -393211, 524295, 4, -327675, 524295, 4, -262139, 524295, 4, -196603, 524295, 4, -131067, 524295, 4, -65531, 589831, 3, 5, 589831, 4, 65541, 524295, 5, 131077, 589831, 1, 196613, 524295, 3, -720890, 524295, 4, -655354, 524295, 3, -589818, 589831, 5, -524282, 589831, 1, -458746, 524295, 5, -393210, 589831, 4, -327674, 524295, 4, -262138, 589831, 1, -196602, 589831, 1, -131066, 589831, 2, -65530, 524295, 5, 6, 589831, 3, 65542, 589831, 4, 131078, 524295, 2, 196614, 589831, 3, -720889, 524295, 1, -655353, 589831, 4, -589817, 589831, 1, -524281, 524295, 1, -458745, 589831, 1, -393209, 589831, 1, -327673, 524295, 3, -262137, 589831, 2, -196601, 524295, 5, -131065, 524295, 4, -65529, 589831, 5, 7, 524295, 2, 65543, 589831, 5, 131079, 524295, 1, 196615, 524295, 5, -720888, 524295, 1, -655352, 524295, 5, -589816, 589831, 5, -524280, 589831, 5, -458744, 524295, 2, -393208, 589831, 2, -327672, 589831, 2, -262136, 589831, 4, -196600, 589831, 4, -131064, 524295, 5, -65528, 589831, 2, 8, 589831, 2, 65544, 589831, 2, 131080, 524295, 3, 196616, 589831, 2, -720887, 524295, 4, -655351, 524295, 5, -589815, 524295, 1, -524279, 524295, 2, -458743, 524295, 3, -393207, 524295, 5, -327671, 524295, 4, -262135, 524295, 5, -196599, 589831, 5, -131063, 589831, 4, -65527, 589831, 1, 9, 524295, 3, 65545, 524295, 4, 131081, 524295, 4, 196617, 589831, 4, -720886, 589831, 5, -655350, 589831, 2, -589814, 524295, 2, -524278, 524295, 4, -458742, 589831, 4, -393206, 589831, 3, -327670, 589831, 2, -262134, 524295, 3, -196598, 524295, 4, -131062, 589831, 1, -65526, 524295, 2, 10, 589831, 1, 65546, 524295, 1, 131082, 589831, 2, 196618, 589831, 2, -720885, 589831, 1, -655349, 589831, 4, -589813, 524295, 1, -524277, 589831, 4, -458741, 589831, 4, -393205, 524295, 2, -327669, 524295, 3, -262133, 524295, 2, -196597, 589831, 5, -131061, 524295, 1, -65525, 589831, 3, 11, 524295, 5, 65547, 589831, 4, 131083, 589831, 3, 196619, 524295, 5, -720884, 524295, 2, -655348, 524295, 4, -589812, 589831, 5, -524276, 524295, 3, -458740, 589831, 5, -393204, 524295, 1, -327668, 524295, 2, -262132, 589831, 2, -196596, 589831, 1, -131060, 524295, 5, -65524, 589831, 4, 12, 589831, 1, 65548, 589831, 2, 131084, 524295, 2, 196620, 589831, 3, -720883, 524295, 1, -655347, 524295, 5, -589811, 589831, 2, -524275, 524295, 3, -458739, 589831, 5, -393203, 524295, 1, -327667, 589831, 2, -262131, 589831, 5, -196595, 589831, 4, -131059, 524295, 3, -65523, 589831, 3, 13, 524295, 5, 65549, 589831, 4, 131085, 589831, 1, 196621, 524295, 5, -720882, 589831, 1, -655346, 589831, 4, -589810, 524295, 4, -524274, 524295, 4, -458738, 589831, 5, -393202, 589831, 4, -327666, 589831, 5, -262130, 589831, 4, -196594, 524295, 4, -131058, 524295, 4, -65522, 589831, 3, 14, 589831, 5, 65550, 524295, 1, 131086, 524295, 2, 196622, 589831, 2, -720881, 524295, 1, -655345, 589831, 4, -589809, 589831, 2, -524273, 524295, 4, -458737, 589831, 4, -393201, 589831, 5, -327665, 589831, 3, -262129, 524295, 2, -196593, 589831, 2, -131057, 589831, 5, -65521, 589831, 3, 15, 524295, 1, 65551, 524295, 4, 131087, 589831, 5, 196623, 524295, 1, -720880, 589831, 5, -655344, 589831, 1, -589808, 589831, 5, -524272, 524295, 3, -458736, 589831, 1, -393200, 589831, 4, -327664, 524295, 5, -262128, 524295, 3, -196592, 589831, 3, -131056, 524295, 2, -65520, 589831, 4, 16, 524295, 1, 65552, 524295, 2, 131088, 524295, 1, 196624, 524295, 4, -720879, 524295, 4, -655343, 589831, 4, -589807, 524295, 1, -524271, 524295, 1, -458735, 524295, 2, -393199, 589831, 2, -327663, 589831, 3, -262127, 589831, 3, -196591, 589831, 5, -131055, 589831, 2, -65519, 524295, 5, 17, 589831, 5, 65553, 524295, 3, 131089, 524295, 2, 196625, 589831, 3, -720878, 589831, 1, -655342, 524295, 4, -589806, 589831, 4, -524270, 589831, 5, -458734, 589831, 2, -393198, 589831, 1, -327662, 589831, 1, -262126, 589831, 2, -196590, 589831, 1, -131054, 589831, 1, -65518, 524295, 1, 18, 524295, 1, 65554, 524295, 4, 131090, 589831, 3, 196626, 589831, 4, -720877, 524295, 1, -655341, 589831, 3, -589805, 524295, 5, -524269, 589831, 1, -458733, 524295, 4, -393197, 589831, 4, -327661, 589831, 2, -262125, 524295, 3, -196589, 589831, 3, -131053, 589831, 1, -65517, 524295, 4, 19, 524295, 2, 65555, 524295, 5, 131091, 524295, 2, 196627, 524295, 5, -720876, 524295, 2, -655340, 589831, 2, -589804, 524295, 2, -524268, 589831, 5, -458732, 589831, 5, -393196, 589831, 1, -327660, 589831, 3, -262124, 524295, 4, -196588, 524295, 5, -131052, 589831, 4, -65516, 524295, 3, 20, 589831, 4, 65556, 524295, 1, 131092, 589831, 1, 196628, 524295, 4, -720875, 589831, 5, -655339, 524295, 3, -589803, 589831, 4, -524267, 589831, 1, -458731, 524295, 3, -393195, 524295, 3, -327659, 589831, 3, -262123, 524295, 5, -196587, 589831, 2, -131051, 589831, 1, -65515, 524295, 2, 21, 524295, 2, 65557, 524295, 1, 131093, 589831, 4, 196629, 589831, 4, -720874, 589831, 3, -655338, 589831, 3, -589802, 524295, 3, -524266, 589831, 2, -458730, 589831, 5, -393194, 589831, 4, -327658, 589831, 4, -262122, 524295, 1, -196586, 589831, 4, -131050, 524295, 4, -65514, 524295, 2, 22, 589831, 1, 65558, 524295, 4, 131094, 524295, 4, 196630, 524295, 2, -720873, 524295, 4, -655337, 589831, 5, -589801, 524295, 1, -524265, 589831, 2, -458729, 524295, 4, -393193, 524295, 1, -327657, 524295, 5, -262121, 524295, 5, -196585, 589831, 4, -131049, 589831, 4, -65513, 524295, 1, 23, 524295, 4, 65559, 589831, 5, 131095, 524295, 2, 196631, 589831, 4, -720872, 524295, 5, -655336, 524295, 5, -589800, 589831, 3, -524264, 524295, 3, -458728, 589831, 4, -393192, 589831, 5, -327656, 589831, 5, -262120, 589831, 2, -196584, 524295, 4, -131048, 589831, 4, -65512, 524295, 4, 24, 589831, 1, 65560, 524295, 1, 131096, 589831, 5, 196632, 589831, 3, -720871, 589831, 4, -655335, 589831, 2, -589799, 589831, 5, -524263, 589831, 4, -458727, 524295, 3, -393191, 524295, 1, -327655, 589831, 1, -262119, 589831, 1, -196583, 589831, 1, -131047, 524295, 4, -65511, 589831, 1, 25, 589831, 1, 65561, 524295, 3, 131097, 524295, 5, 196633, 524295, 2, -720870, 524295, 1, -655334, 589831, 4, -589798, 524295, 4, -524262, 524295, 2, -458726, 524295, 2, -393190, 524295, 3, -327654, 524295, 5, -262118, 524295, 4, -196582, 524295, 5, -131046, 524295, 5, -65510, 589831, 3, 26, 589831, 2, 65562, 589831, 5, 131098, 589831, 4, 196634, 524295, 1, -720869, 524295, 2, -655333, 589831, 3, -589797, 589831, 4, -524261, 524295, 4, -458725, 524295, 2, -393189, 589831, 2, -327653, 589831, 2, -262117, 524295, 1, -196581, 589831, 2, -131045, 524295, 3, -65509, 524295, 2, 27, 524295, 5, 65563, 589831, 3, 131099, 589831, 3, 196635, 524295, 5, -720868, 589831, 1, -655332, 524295, 4, -589796, 524295, 2, -524260, 524295, 3, -458724, 524295, 2, -393188, 524295, 2, -327652, 524295, 1, -262116, 524295, 3, -196580, 589831, 3, -131044, 524295, 3, -65508, 589831, 2, 28, 589831, 1, 65564, 524295, 4, 131100, 524295, 2, 196636, 524295, 3, -720867, 589831, 3, -655331, 589831, 1, -589795, 524295, 3, -524259, 524295, 3, -458723, 524295, 1, -393187, 524295, 1, -327651, 589831, 4, -262115, 524295, 2, -196579, 589831, 2, -131043, 589831, 4, -65507, 589831, 2, 29, 524295, 4, 65565, 589831, 4, 131101, 589831, 4, 196637, 524295, 3, -720866, 524295, 1, -655330, 589831, 2, -589794, 524295, 4, -524258, 589831, 4, -458722, 524295, 2, -393186, 589831, 2, -327650, 524295, 4, -262114, 524295, 4, -196578, 524295, 4, -131042, 589831, 2, -65506, 524295, 3, 30, 524295, 4, 65566, 524295, 1, 131102, 589831, 5, 196638, 589831, 2, -720865, 524295, 5, -655329, 589831, 4, -589793, 589831, 2, -524257, 524295, 2, -458721, 589831, 5, -393185, 524295, 5, -327649, 589831, 1, -262113, 589831, 1, -196577, 589831, 4, -131041, 589831, 5, -65505, 524295, 1, 31, 524295, 5, 65567, 589831, 1, 131103, 524295, 5, 196639, 524295, 4, -720864, 524295, 3, -655328, 524295, 5, -589792, 524295, 1, -524256, 524295, 3, -458720, 589831, 5, -393184, 589831, 3, -327648, 589831, 3, -262112, 524295, 4, -196576, 589831, 5, -131040, 589831, 2, -65504, 589831, 5, 32, 589831, 5, 65568, 589831, 2, 131104, 589831, 2, 196640, 589831, 3, -720863, 262145, 10, -655327, 524295, 1, -589791, 589831, 5, -524255, 589831, 4, -458719, 262145, 11, -393183, 589831, 4, -327647, 589831, 3, -262111, 524295, 1, -196575, 589831, 1, -131039, 524295, 5, -65503, 524295, 1, 33, 262145, 10, 65569, 589831, 4, 131105, 524295, 1, 196641, 327681, 11, -720862, 262145, 11, -655326, 262145, 10, -589790, 524295, 5, -524254, 327681, 11, -458718, 327681, 10, -393182, 262145, 10, -327646, 262145, 11, -262110, 327681, 10, -196574, 589831, 2, -131038, 524295, 1, -65502, 262145, 11, 34, 262145, 11, 65570, 262145, 10, 131106, 262145, 11, 196642, 262145, 10, -720861, 327681, 10, -655325, 327681, 11, -589789, 262145, 11, -524253, 262145, 11, -458717, 262145, 10, -393181, 327681, 11, -327645, 327681, 11, -262109, 327681, 11, -196573, 327681, 10, -131037, 327681, 10, -65501, 327681, 10, 35, 262145, 11, 65571, 262145, 10, 131107, 262145, 11, 196643, 327681, 11, -720860, 262145, 11, -655324, 327681, 10, -589788, 327681, 10, -524252, 327681, 10, -458716, 327681, 11, -393180, 262145, 10, -327644, 327681, 11, -262108, 262145, 11, -196572, 327681, 11, -131036, 327681, 11, -65500, 327681, 11, 36, 327681, 11, 65572, 262145, 10, 131108, 327681, 11, 196644, 327681, 11, -720859, 262145, 10, -655323, 262145, 10, -589787, 262145, 10, -524251, 327681, 11, -458715, 327681, 10, -393179, 327681, 10, -327643, 327681, 11, -262107, 327681, 11, -196571, 262145, 10, -131035, 262145, 11, -65499, 327681, 10, 37, 262145, 11, 65573, 262145, 10, 131109, 327681, 11, 196645, 327681, 10, -720858, 327681, 11, -655322, 327681, 10, -589786, 262145, 10, -524250, 262145, 10, -458714, 262145, 11, -393178, 262145, 11, -327642, 327681, 11, -262106, 327681, 10, -196570, 262145, 11, -131034, 262145, 10, -65498, 262145, 10, 38, 262145, 11, 65574, 262145, 11, 131110, 327681, 11, 196646, 262145, 11, -720857, 262145, 11, -655321, 262145, 10, -589785, 327681, 11, -524249, 327681, 10, -458713, 262145, 10, -393177, 262145, 10, -327641, 327681, 10, -262105, 262145, 10, -196569, 327681, 11, -131033, 327681, 11, -65497, 262145, 11, 39, 327681, 11, 65575, 327681, 11, 131111, 262145, 11, 196647, 327681, 11)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_e21t6")
volume_db = -20.0
bus = &"Music"

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
